--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Exposé "Si je reste"</title>
     </head>
     <title>
-        
+        <h1>cc</h1>
+        <img src="./zyro-image.png" alt="ImageE" >
     </title>
 </html>
