--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <head>
         <title>Exposé "Si je reste"</title>
     </head>
-    <title>
+    <body>
         <h1>cc</h1>
         <img src="./zyro-image.png" alt="ImageE" >
-    </title>
+    </body>
 </html>
