--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
     <head>
         <title>Exposé "Si je reste"</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <h1>cc</h1>
-        <img src="./zyro-image.png" alt="ImageE" >
+        <img src="./zyro-image.png" alt="Image" id="ImgE">
     </body>
 </html>
