--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
+        <img src="./img_f.png" alt="Image de fond" class="img_f" >
         <img src="./zyro-image.png" alt="Image" id="ImgE">
     </body>
 </html>
