--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <img src="./img_f.png" alt="Image de fond" class="img_f" >
-        <img src="./zyro-image.png" alt="Image" id="ImgE">
+
+        <div id="diapo1" >
+            <img src="./img_f.png" alt="Image de fond" class="img_f" >
+            <img src="./zyro-image.png" alt="Image" id="ImgE">
+        </div>
+
+    <script src="main.js"></script>
+    
     </body>
 </html>
