--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
     </head>
     <body>
 
-        <div id="diapo1" >
+        <div id="diapo2">
             <img src="./img_f.png" alt="Image de fond" class="img_f" >
-            <img src="./zyro-image.png" alt="Image" id="ImgE">
+            <img src="./crash.png" alt="Image de fond" class="img_f" >
+        </div>
+
+        <div id="diapo1" >
+            <img src="./img_f.png" alt="Image de fond" class="img_f" id="crash" >
+            <img src="./zyro-image.png" alt="Image" id="ImgE" >
         </div>
 
     <script src="main.js"></script>
-    
+
     </body>
 </html>
