--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         </div>
 
         <div id="diapo1" >
+            <img src="./crash.png" alt="Image de fond" class="img_f" >
             <img src="./img_f.png" alt="Image de fond" class="img_f" id="crash" >
             <img src="./zyro-image.png" alt="Image" id="ImgE" >
         </div>
