--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <body>
 
         <div id="diapo2">
-            <img src="./img_f.png" alt="Image de fond" class="img_f" >
             <img src="./crash.png" alt="Image de fond" class="img_f" >
+            <img src="./img_f.png" alt="Image de fond" class="img_f" id="crash">
         </div>
 
         <div id="diapo1" >
