--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     </head>
     <body>
 
+        <div id="diapo3">
+            <img src="./crash.png" alt="Image de fond" class="img_f" >
+            <img src="./img_f.png" alt="Image de fond" class="img_f" id="crash">
+        </div>
+
         <div id="diapo2">
             <img src="./crash.png" alt="Image de fond" class="img_f" >
             <img src="./img_f.png" alt="Image de fond" class="img_f" id="crash">
+            <img src="violloncel.png" alt="violoncelle" id="v"></img>
+            <img src="guitare.png" alt="guitare" id="g" >
         </div>
 
         <div id="diapo1" >
