--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <img src="./crash.png" alt="Image de fond" class="img_f" >
-        <img src="./img_f.png" alt="Image de fond" class="img_f" id="crash">
+
         <div id="diapo3">
-            
+            <img src="./crash.png" alt="Image de fond" class="img_f" >
+            <img src="./img_f.png" alt="Image de fond" class="img_f" id="crash">
         </div>
 
-        <div id="diapo2">>
+        <div id="diapo2">
+            <img src="./crash.png" alt="Image de fond" class="img_f" >
+            <img src="./img_f.png" alt="Image de fond" class="img_f" id="crash">
             <img src="violloncel.png" alt="violoncelle" id="v"></img>
             <img src="guitare.png" alt="guitare" id="g" >
         </div>
 
         <div id="diapo1" >
+            <img src="./crash.png" alt="Image de fond" class="img_f" >
+            <img src="./img_f.png" alt="Image de fond" class="img_f" id="crash" >
             <img src="./zyro-image.png" alt="Image" id="ImgE" >
         </div>
-        <div id="scroll" ></div>
+
     <script src="main.js"></script>
 
     </body>
