--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <html>
     <head>
         <title>Exposé "Si je reste"</title>
@@ -5,9 +6,15 @@
     </head>
     <body>
 
+        <div id="diapo4">
+            <img src="./crash.png" alt="Image de fond" class="img_f" >
+            <img src="./img_f.png" alt="Image de fond" class="img_f" id="crash">
+            <img src="remembers.jpg" alt="Image absente" id="remembers" >
+        </div>
         <div id="diapo3">
             <img src="./crash.png" alt="Image de fond" class="img_f" >
             <img src="./img_f.png" alt="Image de fond" class="img_f" id="crash">
+            <img src="doors.jpg" alt="Image absente" id="door" >
         </div>
 
         <div id="diapo2">
