--- a/index.html
+++ b/index.html
@@ -6,6 +6,53 @@
     </head>
     <body>
 
+        <div id="diapo6">
+            <img src="./crash.png" alt="Image de fond" class="img_f" >
+            <img src="./img_f.png" alt="Image de fond" class="img_f" id="crash">
+        </div>
+
+        <div id="diapo5">
+            <img src="./crash.png" alt="Image de fond" class="img_f" >
+            <img src="./img_f.png" alt="Image de fond" class="img_f" id="crash">
+            <div id="container_q">
+                 <div id="q1_c">
+                    <h3 id="q1_text">Kim est : </h3>
+                 <select id="q1">
+                    <option value="1">Une amie des parents</option>
+                    <option value="2">L'amie de Mia</option>
+                    <option value="3">L'amie d'Adam</option>
+                  </select>
+                  <button id="q1_btn" onclick="q1()" >Vérifier</button>
+                  </div>
+                  <div id="q2_c">
+                    <h3 id="q2_text" >Henry est : </h3>
+                  <select id="q2">
+                    <option value="1">Un ami d'Adam</option>
+                    <option value="2">Le conducteur du camion.</option>
+                    <option value="3">Un ami des parents</option>
+                  </select>
+                  <button id="q2_btn" onclick="q2()" >Vérifier</button>
+                  </div>
+                  <div id="q3_c">
+                    <h3 id="q3_text" >L'instrument de Mia est : </h3>
+                  <select id="q3">
+                    <option value="1">Violon</option>
+                    <option value="2">Violoncelle</option>
+                    <option value="3">Alto</option>
+                  </select>
+                  <button id="q3_btn" onclick="q3()" >Vérifier</button>
+                  </div>
+                  <div id="q4_c">
+                    <h3 id="q4_text" >Le groupe de rock d'Adam s'appelle : </h3>
+                  <select id="q4">
+                    <option value="1">Life Start</option>
+                    <option value="2">Shooting Start</option>
+                    <option value="3">Country Start</option>
+                  </select>
+                  <button id="q4_btn" onclick="q4()" >Vérifier</button>
+                  </div>
+                </div>
+        </div>
         <div id="diapo4">
             <img src="./crash.png" alt="Image de fond" class="img_f" >
             <img src="./img_f.png" alt="Image de fond" class="img_f" id="crash">
